<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".PersegiPanjangFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <!-- TODO: Update blank fragment layout -->

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edPanjangPp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/masukkan_panjang"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/masukkan_lebar"
                android:ems="10"
                android:id="@+id/edLebarPp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edPanjangPp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"/>
        <Button
                android:text="@string/hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnHitungPp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/edLebarPp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="84dp"
                android:layout_marginStart="84dp"/>
        <TextView
                android:text="@string/luas"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/tvLuasPp" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/btnHitungPp" app:layout_constraintHorizontal_bias="0.311"/>
        <TextView
                android:text="@string/keliling"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:id="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toStartOf="@+id/tvKelPp"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="4dp"
                app:layout_constraintHorizontal_bias="0.311"/>
        <TextView
                android:text="@string/_0"
                android:layout_width="60dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:id="@+id/tvLuasPp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="76dp"
                android:layout_marginRight="76dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/btnHitungPp"/>
        <TextView
                android:text="@string/_0"
                android:layout_height="wrap_content"
                android:layout_width="60dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:id="@+id/tvKelPp"
                app:layout_constraintTop_toBottomOf="@+id/tvLuasPp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="76dp" android:layout_marginRight="76dp" android:layout_marginTop="4dp"/>
        <Button
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSharePp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="84dp" android:layout_marginRight="84dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/edLebarPp"
                app:layout_constraintStart_toEndOf="@+id/btnHitungPp" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
